tests/Fase2-Semantic/error/t20-declaring_a_not_basic_type_method.ctds
class main {
	integer x;
	

	int add(){
		x = x+1;
		return x;
	}

	void main(){
		x=0;
		add();
	}
	
}
